# spotify-tools

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
src/: auth.rs  cmds.rs  main.rs
src/cmds/: command.rs  decades.rs  duplicates.rs  genres.rs  spotify_api.rs  tracks_info.rs  util.rs
