[package]
name = "spotify-tools"
version = "1.0.0"
authors = ["Tomasz Chojnacki <tomekch6@gmail.com>"]
edition = "2018"

[dependencies]
open = "1.3.2"
url = "2.1.0"
dialoguer = "0.4.0"
indicatif = "0.12.0"
reqwest = "0.9.20"
serde = "1.0.100"
serde_json = "1.0.40"
console = "0.9.0"
itertools = "0.8.0"
